cassandra/4.0/modules/ROOT/pages/cassandra-connector-config-topics.adoc
= Apache Cassandra Connector 4.0 Additional Configuration Information - Mule 4
:page-aliases: connectors::cassandra/cassandra-connector-config-topics.adoc

Configure Anypoint Connector for Apache Cassandra (Apache Cassandra Connector) to work in your environment with basic authentication and DataSense functionality.

[[enable-authentication]]
== Enable Apache Cassandra Authentication

By default, accessing the Apache Cassandra database does not require credentials.
You need to configure Apache Cassandra to enable authentication. The Apache Cassandra Connector configuration must match the Apache Cassandra configuration for basic authentication.

After enabling authentication, run the `cqlsh` command from the Apache Cassandra installation home directory as shown in this example, which uses
default credentials with username `cassandra` and password `cassandra`:

[source,text,linenums]
----
bin/cqlsh localhost -u cassandra -p cassandra
Connected to Test Cluster at localhost:9042.
[cqlsh 5.0.1 | Cassandra 3.10 | CQL spec 3.4.4 | Native protocol v4]
Use HELP for help.
----

. After installing Apache Cassandra, open the `conf\cassandra.yaml` file for editing.
. Optionally, change the value of `AllowAllAuthenticator` to `PasswordAuthenticator`.
. Restart Apache Cassandra.
. In a separate terminal tab, verify that Apache Cassandra is running:
+
`bin/nodetool status`

== POJO Configuration

The connector exposes multiple operations in the Apache Cassandra Connector Reference.
The following operations accept some POJOs as input parameters, which are needed for the DataSense functionality:

* `addNewColumn`
* `changeColumnType`
* `createKeyspace`
* `createTable`
* `deleteColumnsValue`
* `deleteRows`
* `dropColumn`
* `dropKeyspace`
* `dropTable`
* `executeCQLQuery`
* `getTableNamesFromKeyspace`
* `renameColumn`
* `select`
* `update`

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
